--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oooh+Baby&family=Source+Sans+Pro&display=swap");
 body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  background-color: rgb(14, 14, 14);
+  background-color: rgb(17, 17, 17);
 }
 
 #navbar {
@@ -11,15 +12,24 @@ body {
   flex-direction: row;
   justify-content: space-between;
   padding: 20px 40px;
-  background-color: rgb(8, 8, 8);
+  background-color: rgb(14, 14, 14);
   align-items: center;
+  height: 40px;
 }
 
 #logo {
-  color: white;
-  font-family: "Lobster", cursive;
-  font-size: 26px;
+  /* font-family: "Lobster", cursive; */
+  font-family: "Oooh Baby", cursive;
+  font-weight: 900;
+  font-size: 33px;
+  margin-left: 20px;
   color: rgb(36, 197, 36);
+  text-decoration: none;
+  transition: all 50ms;
+}
+
+#logo:hover {
+  color: rgb(62, 255, 62);
 }
 
 input {
@@ -37,6 +47,10 @@ button {
   width: 40px;
 }
 
+button:hover {
+  background-color: rgb(224, 224, 224);
+}
+
 #links {
   display: flex;
   flex-direction: row;
@@ -46,7 +60,7 @@ button {
 #shows {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   justify-content: center;
 }
 
@@ -55,7 +69,7 @@ button {
   margin: 50px;
   text-align: center;
   background-color: rgb(11, 49, 99);
-  height: 450px;
+  /* height: 450px; */
   width: 350px;
 }
 
@@ -63,8 +77,8 @@ button {
   box-sizing: border-box;
   margin: 50px;
   text-align: center;
-  height: 450px;
-  width: 300px;
+  /* height: 450px; */
+  width: 240px;
 }
 
 .image:hover {
@@ -72,4 +86,10 @@ button {
   box-shadow: 10px 5px 5px white;
   transform: translate(0, 8px);
   transition: all 200ms;
+}
+
+@media (max-width: 679px) {
+  #logo {
+    margin-left: 0px;
+  }
 }
